--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body::before {
   height: 100%;
   width: 100%;
   z-index: -1;
-  background-color: 22577a;
+  background-color: #22577a;
   /*background-image: linear-gradient(
       115deg,
       rgba(41, 79, 55, 0.326),
