--- a/styles.css
+++ b/styles.css
@@ -32,15 +32,6 @@ body::before {
   width: 100%;
   z-index: -1;
   background-color: #22577a;
-  /*background-image: linear-gradient(
-      115deg,
-      rgba(41, 79, 55, 0.326),
-      rgba(95, 95, 135, 0)
-    ),
- url(https://images.pexels.com/photos/5198264/pexels-photo-5198264.jpeg?auto=compress&cs=tinysrgb&w=600);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;*/
 }
 
 h1 {
@@ -174,7 +165,7 @@ form {
   display: block;
   width: 100%;
   padding: 0.75rem;
-  background-color: 38b000;
+  background-color: #38b000;
   color: inherit;
   border-radius: 2px;
   cursor: pointer;
